# LIDAR-Segmentation-Based-on-Range-Image

./: README.md  forange.pcd
code/: CMakeLists.txt  ground_remove.cpp  ground_remove.h  range_image_seg.cpp
